fix exceptions in controller
